Cleanup of raw serializer test